--- a/FortMapperTest/World/World.html
+++ b/FortMapperTest/World/World.html
@@ -1,11 +1,10 @@
 <html>
     <head>
         <title>FortMapperTest</title>
-        <script src="World.json" type="application/json" id="WorldJson"></script>
         <script src="World.js" defer></script>
     </head>
-    <body>
+    <body style="overflow: hidden;">
         <input type="file" id="jsoninput" />
-        <canvas id="canvas" height="2048" width="2048"></canvas>
+        <canvas style="display: none;position: fixed;top: 0;left: 0;" id="canvas"></canvas>
     </body>
 </html>
