--- a/FortMapperTest/World/World.html
+++ b/FortMapperTest/World/World.html
@@ -1,10 +1,13 @@
 <html>
-    <head>
-        <title>FortMapperTest</title>
-        <script src="World.js" defer></script>
-    </head>
-    <body style="overflow: hidden;">
-        <input type="file" id="jsoninput" />
-        <canvas style="display: none;position: fixed;top: 0;left: 0;" id="canvas"></canvas>
-    </body>
+<head>
+    <title>FortMapperTest</title>
+    <script src="World.js" defer></script>
+</head>
+<body style="overflow: hidden;">
+    <input type="file" id="jsoninput" />
+    <canvas style="display: none;position: fixed;top: 0;left: 0;" id="canvas"></canvas>
+    <div id="actor-buttons" style="position: fixed;top: 0;left: 0;width: auto;height: auto;display: none;background-color: white;">
+
+    </div>
+</body>
 </html>
