--- a/FortMapperTest/World/World.html
+++ b/FortMapperTest/World/World.html
@@ -2,11 +2,17 @@
 <head>
     <title>FortMapperTest</title>
     <script src="World.js" defer></script>
+    <style>
+        * {
+            user-select: none;
+            color: black;
+        }
+    </style>
 </head>
-<body style="overflow: hidden;">
-    <input type="file" id="jsoninput" />
+<body style="overflow: hidden;background-color: white;">
+    <input style="position: fixed;top: 0; left: 0;z-index: 1;background-color: white;" type="file" id="jsoninput" />
     <canvas style="display: none;position: fixed;top: 0;left: 0;" id="canvas"></canvas>
-    <div id="actor-buttons" style="position: fixed;top: 0;left: 0;width: auto;height: auto;display: none;background-color: white;">
+    <div id="actor-buttons" style="position: fixed;top: 0;left: 0;width: auto;height: auto;display: none;background-color: white;background-color: white;">
 
     </div>
 </body>
