--- a/FortMapperTest/Loot/Loot.html
+++ b/FortMapperTest/Loot/Loot.html
@@ -4,7 +4,7 @@
     <script src="Loot.js" defer></script>
     <style>
         * {
-            user-select: none;
+            /*user-select: none;*/
         }
 
         .item-container {
@@ -15,7 +15,7 @@
         }
 
         .item-card {
-            width: 100px;
+            width: 150px;
             height: auto;
             align-items: center;
             display: flex;
@@ -23,13 +23,18 @@
             margin: 10px;
         }
 
+        label {
+            font-size: x-large;
+        }
+
         .item-card label {
-            font-size: x-small;
+            font-size: small;
             white-space: nowrap;
         }
 
         .item-card img {
             width: 100%;
+            height: 150px;
             background: #00DBFB;
             border: 2px solid #222222;
         }
@@ -40,11 +45,14 @@
     <select id="ltd-input" style="display: none;">
         <option value="">Select something pls &lt3</option>
         <option value="Loot_AthenaTreasure">Chest</option>
+        <option value="Loot_AthenaSupplyDrop">Supply Drop</option>
+        <option value="Loot_AthenaFloorLoot">Floor Loot</option>
+        <option value="Loot_AthenaFloorLoot_Warmup">Floor Loot (Warmup)</option>
+        <option value="Loot_AthenaLlama">Llama</option>
     </select>
     <select id="extra-input" style="display: none;">
         <option value="global">Global Percentage</option>
         <option value="local">Local Percentage</option>
-        <option value="combine">Combine Weapons</option>
     </select>
 
     <br />
