Some WorldExport changes

--- a/FortMapperTest/World/World.html
+++ b/FortMapperTest/World/World.html
@@ -10,10 +10,12 @@
     </style>
 </head>
 <body style="overflow: hidden;background-color: white;">
-    <input style="position: fixed;top: 0; left: 0;z-index: 1;background-color: white;" type="file" id="jsoninput" />
     <canvas style="display: none;position: fixed;top: 0;left: 0;" id="canvas"></canvas>
-    <div id="actor-buttons" style="position: fixed;top: 0;left: 0;width: auto;height: auto;display: none;background-color: white;background-color: white;">
+    <div style="position: fixed; top: 0; left: 0; width: auto; height: auto; background-color: white; background-color: white;">
+        <input type="file" id="jsoninput" />
+        <div id="actor-buttons" style="display: none;">
 
+        </div>
     </div>
 </body>
 </html>
