Unify loot tables + loot rework (temporarily scuffed)

--- a/FortMapperTest/World/World.html
+++ b/FortMapperTest/World/World.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>FortMapperTest</title>
+    <title>FortMapperTest - World</title>
     <script src="World.js" defer></script>
     <style>
         * {
