--- a/FortMapperTest/Loot/Loot.html
+++ b/FortMapperTest/Loot/Loot.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>FortMapperTest</title>
+    <title>FortMapperTest - Loot</title>
     <script src="Loot.js" defer></script>
     <style>
         * {
@@ -35,13 +35,13 @@
         .item-card img {
             width: 100%;
             height: 150px;
-            background: #00DBFB;
+            background: #FF00FF;
             border: 2px solid #222222;
         }
     </style>
 </head>
 <body style="background-color: #666666;">
-    <input multiple type="file" id="data-input" />
+    <input type="file" id="data-input" />
     <select id="ltd-input" style="display: none;">
         <option value="">Select something pls &lt3</option>
         <option value="Loot_AthenaTreasure">Chest</option>
@@ -49,10 +49,6 @@
         <option value="Loot_AthenaFloorLoot">Floor Loot</option>
         <option value="Loot_AthenaFloorLoot_Warmup">Floor Loot (Warmup)</option>
         <option value="Loot_AthenaLlama">Llama</option>
-    </select>
-    <select id="extra-input" style="display: none;">
-        <option value="global">Global Percentage</option>
-        <option value="local">Local Percentage</option>
     </select>
 
     <br />
