Chest, floorloot support

--- a/FortMapperTest/Loot/Loot.html
+++ b/FortMapperTest/Loot/Loot.html
@@ -45,10 +45,10 @@
     <select id="ltd-input" style="display: none;">
         <option value="">Select something pls &lt3</option>
         <option value="Loot_AthenaTreasure">Chest</option>
-        <option value="Loot_AthenaSupplyDrop">Supply Drop</option>
+        <option value="Loot_AthenaSupplyDrop">Supply Drop - UNFINISHED</option>
         <option value="Loot_AthenaFloorLoot">Floor Loot</option>
         <option value="Loot_AthenaFloorLoot_Warmup">Floor Loot (Warmup)</option>
-        <option value="Loot_AthenaLlama">Llama</option>
+        <option value="Loot_AthenaLlama">Llama - UNFINISHED</option>
     </select>
 
     <br />
