Supply Drop, Llama support + World coords

--- a/FortMapperTest/World/World.html
+++ b/FortMapperTest/World/World.html
@@ -13,6 +13,9 @@
     <canvas style="display: none;position: fixed;top: 0;left: 0;" id="canvas"></canvas>
     <div style="position: fixed; top: 0; left: 0; width: auto; height: auto; background-color: white; background-color: white;">
         <input type="file" id="jsoninput" />
+        <br>
+        X:<label id="coords-x">20</label><br>
+        Y:<label id="coords-y">20</label><br>
         <div id="actor-buttons" style="display: none;">
 
         </div>
