--- a/FortMapperTest/Loot/Loot.html
+++ b/FortMapperTest/Loot/Loot.html
@@ -49,6 +49,7 @@
         <option value="Loot_AthenaFloorLoot">Floor Loot</option>
         <option value="Loot_AthenaFloorLoot_Warmup">Floor Loot (Warmup)</option>
         <option value="Loot_AthenaLlama">Llama</option>
+        <option value="Loot_AthenaVending">Vending Machine</option>
     </select>
 
     <br />
