Main br loot stuff

--- a/FortMapperTest/Loot/Loot.html
+++ b/FortMapperTest/Loot/Loot.html
@@ -50,6 +50,9 @@
         <option value="Loot_AthenaFloorLoot_Warmup">Floor Loot (Warmup)</option>
         <option value="Loot_AthenaLlama">Llama</option>
         <option value="Loot_AthenaVending">Vending Machine</option>
+        <option value="Loot_Golden_Llama">Golden Llama</option>
+        <option value="Loot_Shrine_Air">Shrine (Air)</option>
+        <option value="Loot_Shrine_Water">Shrine (Water)</option>
     </select>
 
     <br />
