ALOT of loot + world stuff

--- a/FortMapperTest/Loot/Loot.html
+++ b/FortMapperTest/Loot/Loot.html
@@ -45,6 +45,7 @@
     <select id="ltd-input" style="display: none;">
         <option value="">Select something pls &lt3</option>
         <option value="Loot_AthenaTreasure">Chest</option>
+        <option value="Loot_ApolloTreasure_Rare">Rare Chest</option>
         <option value="Loot_AthenaSupplyDrop">Supply Drop</option>
         <option value="Loot_AthenaFloorLoot">Floor Loot</option>
         <option value="Loot_AthenaFloorLoot_Warmup">Floor Loot (Warmup)</option>
